--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -19,6 +19,7 @@
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
     "import src.fusion as fusion\n",
     "from src.labels import Labels\n",
     "from src.pipeline import Pipeline\n",
@@ -62,12 +63,15 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
     "pc_data_folder = '../datasets/pointcloud/'\n",
     "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
+    "# Create reader for BGT road part polygons.\n",
+    "bgt_road_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_data_file)"
    ]
   },
   {
@@ -83,7 +87,7 @@
     "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_reader=bgt_road_reader, grid_size=0.05,\n",
     "                            min_component_size=5000, params=car_params)"
    ]
   },
