--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -30,6 +30,7 @@
     "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.labels import Labels\n",
     "\n",
@@ -61,7 +62,8 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# The corresponding BGT data file.\n",
-    "bgt_data_file = '../datasets/bgt/custom_pole_points_demo.csv'\n",
+    "bgt_data_file = '../datasets/bgt/custom_poles_demo.csv'\n",
+    "bgt_pole_reader = bgt_utils.BGTPointReader(bgt_file=bgt_data_file)\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -120,9 +122,9 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
