--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -19,6 +19,7 @@
     "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
     "import src.fusion as fusion\n",
     "from src.labels import Labels\n",
     "from src.pipeline import Pipeline\n",
@@ -63,7 +64,8 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_demo.csv'\n",
+    "bgt_street_furniture_reader = bgt_utils.BGTPointReader(bgt_file=bgt_data_file)\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -84,8 +86,10 @@
     "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=rubbish_bin_params)\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n"
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', bgt_reader=bgt_street_furniture_reader,\n",
+    "                                                   ahn_reader=ahn_reader, params=rubbish_bin_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', bgt_reader=bgt_street_furniture_reader,\n",
+    "                                                  ahn_reader=ahn_reader, params=city_bench_params)"
    ]
   },
   {
