Remove redundant code in AHNFuser.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -106,8 +106,7 @@
    "outputs": [],
    "source": [
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader,\n",
-    "                                   target='ground', epsilon=0.2)\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader, target='ground', epsilon=0.2)\n",
     "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
     "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_reader=bgt_building_reader, offset=0.25, ahn_reader=ahn_reader)"
    ]
