--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -66,10 +66,10 @@
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader=npz_reader,\n",
     "                                   target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
-    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_reader=npz_reader,\n",
     "                                     target='building', epsilon=0.2)"
    ]
   },
@@ -120,7 +120,7 @@
     "                                         smoothen=True, smooth_thickness=2)\n",
     "\n",
     "# Ground fuser using AHN GeoTIFF data.\n",
-    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=geotiff_reader,\n",
+    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader=geotiff_reader,\n",
     "                                       target='ground', epsilon=0.2)"
    ]
   },
