Working solution for all classes.

--- a/notebooks/Refine ground.ipynb
+++ b/notebooks/Refine ground.ipynb
@@ -33,11 +33,12 @@
    "outputs": [],
    "source": [
     "tilecode = '2386_9702'\n",
+    "# tilecode = '2397_9705'\n",
     "\n",
     "in_file = '../datasets/pointcloud/processed_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/refined_' + tilecode + '.laz'\n",
     "\n",
-    "target_labels = [Labels.CAR, Labels.TREE, Labels.TRAFFIC_SIGN, Labels.STREET_LIGHT]\n",
+    "target_labels = [Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.TRAFFIC_SIGN, Labels.STREET_LIGHT, Labels.CITY_BENCH, Labels.RUBBISH_BIN]\n",
     "exclude_labels = (Labels.NOISE,)\n",
     "\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -51,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'top': .4, 'grid_size': 0.2, 'min_comp_size': 20}\n",
+    "params = {'top': 1., 'grid_size': 0.4, 'min_comp_size': 100}\n",
     "\n",
     "refiner = growing.RefineGround(target_labels, npz_reader, params)"
    ]
@@ -136,7 +137,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Add it to the pipeline."
+    "Add it to the pipeline.\n",
+    "\n",
+    "**DOESN'T WORK YET**"
    ]
   },
   {
