Remove not implemented street furniture object

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -218,7 +218,7 @@
     "csv_headers = ['bgt_type', 'x', 'y']\n",
     "\n",
     "# BGT layers\n",
-    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank', 'BGTPLUS_BAK_afval_apart_plaats']"
+    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank']"
    ]
   },
   {
@@ -239,7 +239,7 @@
     "    bgt_point_objects_csv += parsed_content\n",
     "\n",
     "# Write the csv (uncomment when data is available)\n",
-    "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
+    "csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   }
  ],
