Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -239,7 +239,7 @@
     "    bgt_point_objects_csv += parsed_content\n",
     "\n",
     "# Write the csv (uncomment when data is available)\n",
-    "csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
+    "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   }
  ],
