--- a/notebooks/Refine ground.ipynb
+++ b/notebooks/Refine ground.ipynb
@@ -26,14 +26,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d303e9b-e638-4a08-a3bf-7bcbde9eee32",
+   "cell_type": "raw",
+   "id": "d5a627c0-9607-41c1-80fa-dcdaf81edc35",
    "metadata": {},
-   "outputs": [],
    "source": [
     "tilecode = '2386_9702'\n",
-    "# tilecode = '2397_9705'\n",
     "\n",
     "in_file = '../datasets/pointcloud/processed_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/refined_' + tilecode + '.laz'\n",
@@ -42,6 +39,28 @@
     "exclude_labels = (Labels.NOISE,)\n",
     "\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
+    "npz_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d303e9b-e638-4a08-a3bf-7bcbde9eee32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tilecode = '2607_9589'\n",
+    "# tilecode = '2397_9705'\n",
+    "\n",
+    "data_folder = '../../datasets/Weesp_train/new_10_classes/'\n",
+    "\n",
+    "in_file = f'{data_folder}processed_{tilecode}.laz'\n",
+    "out_file = f'{data_folder}refined_{tilecode}.laz'\n",
+    "\n",
+    "target_labels = growing.RefineGround.TARGET_LABELS\n",
+    "exclude_labels = (Labels.NOISE,)\n",
+    "\n",
+    "ahn_data_folder = '../../datasets/Weesp/ahn_tiles/'\n",
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)"
    ]
   },
@@ -88,16 +107,6 @@
     "mask = np.ones((len(points),), dtype=bool)\n",
     "for l in exclude_labels:\n",
     "    mask = mask & (labels != l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d74ebf7c-3357-4537-b14a-22ed37df538b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: why are no points added?"
    ]
   },
   {
