Small fixes and code restructuring (#45)
* Add BGTReader classes to read points and polygons.

* Remove redundant code in AHNFuser.

* Fix poly_clip when polygon has internal gap(s).

* Numba parallellization of poly_clip.

* Updated / renamed reference data.

* Updated CloudCompare color scale with more practical values.

* Updated notebooks.

Co-authored-by: chrise96 <chrise96@hotmail.com>

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -45,7 +45,8 @@
    "source": [
     "# Single file\n",
     "tilecode = '2386_9702'\n",
-    "bbox = las_utils.get_bbox_from_tile_code(tilecode, padding=10)"
+    "# tilecode = '2397_9705'\n",
+    "bbox = las_utils.get_bbox_from_tile_code(tilecode, padding=5)"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "outputs": [],
    "source": [
     "# All files in a folder\n",
-    "bbox = las_utils.get_bbox_from_las_folder('../datasets/pointcloud/', padding=10)"
+    "bbox = las_utils.get_bbox_from_las_folder('../datasets/pointcloud/', padding=5)"
    ]
   },
   {
@@ -76,7 +77,7 @@
    "source": [
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
-    "csv_headers = ['building_id', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
+    "csv_headers = ['bgt_type', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
     "\n",
     "bgt_layer = 'BGT_PND_pand'"
    ]
@@ -92,7 +93,7 @@
     "json_response = ams_bgt_scraper.scrape_amsterdam_bgt(bgt_layer, bbox=bbox)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "parsed_content = ams_bgt_scraper.parse_buildings(json_response, prepare_csv=True)\n",
+    "parsed_content = ams_bgt_scraper.parse_polygons(json_response)\n",
     "\n",
     "# Write the csv\n",
     "csv_utils.write_csv(bgt_data_file, parsed_content, csv_headers)"
@@ -115,7 +116,7 @@
    "source": [
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
-    "csv_headers = ['bgt_name', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
+    "csv_headers = ['bgt_type', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
     "    \n",
     "# Road and parking spots layers in BGT\n",
     "bgt_layers = ['BGT_WGL_rijbaan_lokale_weg', 'BGT_WGL_parkeervlak',\n",
@@ -138,7 +139,7 @@
     "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    \n",
     "    # Parse the downloaded json response.\n",
-    "    parsed_content = ams_bgt_scraper.parse_polygons(json_content, prepare_csv=True)\n",
+    "    parsed_content = ams_bgt_scraper.parse_polygons(json_content)\n",
     "    bgt_road_polygons_csv += parsed_content\n",
     "\n",
     "# Write the csv\n",
@@ -161,8 +162,8 @@
    "outputs": [],
    "source": [
     "# Output file for the BGT fuser.\n",
-    "bgt_data_file = '../datasets/bgt/custom_pole_points_demo.csv'\n",
-    "csv_headers = ['Type', 'X', 'Y']\n",
+    "bgt_data_file = '../datasets/bgt/custom_poles_demo.csv'\n",
+    "csv_headers = ['bgt_type', 'x', 'y']\n",
     "\n",
     "# BGT layers (without the traffic sign layer)\n",
     "bgt_layers = ['BGTPLUS_PAL_lichtmast', 'BGTPLUS_VGT_boom']"
@@ -213,11 +214,11 @@
    "outputs": [],
    "source": [
     "# Output file for the BGT fuser.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
-    "csv_headers = ['Type', 'X', 'Y']\n",
+    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_demo.csv'\n",
+    "csv_headers = ['bgt_type', 'x', 'y']\n",
     "\n",
     "# BGT layers\n",
-    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank', 'BGTPLUS_BAK_afval_apart_plaats']"
+    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank']"
    ]
   },
   {
