--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -31,6 +31,7 @@
     "from src.pipeline import Pipeline\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
@@ -60,17 +61,15 @@
    "source": [
     "# Data folder and file for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
-    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
-    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "\n",
     "# Create the reader for .npz data.\n",
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader=npz_reader,\n",
     "                                   target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
-    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder, ahn_reader=npz_reader,\n",
+    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_reader=npz_reader,\n",
     "                                     target='building', epsilon=0.2)"
    ]
   },
@@ -121,7 +120,7 @@
     "                                         smoothen=True, smooth_thickness=2)\n",
     "\n",
     "# Ground fuser using AHN GeoTIFF data.\n",
-    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader=geotiff_reader,\n",
+    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader=geotiff_reader,\n",
     "                                       target='ground', epsilon=0.2)"
    ]
   },
@@ -129,8 +128,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Optional] Road segments\n",
-    "Ground points that fall within certain road parts are labelled as such."
+    "### [Optional] Segment road parts\n",
+    "Ground points that fall within certain road parts are labelled as such.\n",
+    "\n",
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb). "
    ]
   },
   {
@@ -139,8 +140,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create reader for BGT road part polygons.\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "bgt_road_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_road_file)\n",
+    "\n",
     "# Road fuser using BGT road polygon data.\n",
-    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_reader=bgt_road_reader)"
    ]
   },
   {
@@ -158,8 +163,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create reader for BGT building footprints polygons.\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bgt_building_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_building_file)\n",
+    "\n",
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_building_file, building_offset=1)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_reader=bgt_building_reader, offset=0.25)"
    ]
   },
   {
@@ -179,8 +188,8 @@
    "outputs": [],
    "source": [
     "# Note: this only works with .npz (pre-processed) AHN data, since GeoTIFF does not contain building data.\n",
-    "bgt_ahn_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_building_file, \n",
-    "                                                 building_offset=0.25, ahn_reader=npz_reader)"
+    "bgt_ahn_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_reader=bgt_building_reader, \n",
+    "                                                 offset=0.25, ahn_reader=npz_reader)"
    ]
   },
   {
@@ -266,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OPTIONAL: Set-up AHN + BGT pipeline with ground separation.\n",
+    "# OPTIONAL: Set-up AHN + BGT pipeline with road part segmentation.\n",
     "process_sequence = (npz_ground_fuser, road_part_fuser, bgt_ahn_building_fuser, building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
