Add ground surface refinement to AHN ground fuser.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Set-up logging.\n",
-    "logfile = '../datasets/pointcloud/pipeline.log'\n",
+    "logfile = 'pipeline.log'\n",
     "log_utils.reset_logger()\n",
     "\n",
     "# INFO messages will be printed to console.\n",
@@ -106,7 +106,8 @@
    "outputs": [],
    "source": [
     "# Ground fuser using pre-processed AHN data.\n",
-    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader, target='ground', epsilon=0.2)\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader, target='ground', epsilon=0.2, refine_ground=True)\n",
+    "\n",
     "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
     "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_reader=bgt_building_reader, offset=0.25, ahn_reader=ahn_reader)"
    ]
@@ -262,7 +263,7 @@
    "source": [
     "# We do this separately for the top and bottom since the best settings for each might differ.\n",
     "building_top = {'bottom': 12., 'grid_size': 0.1, 'threshold': 0.5}\n",
-    "building_bottom = {'bottom': 0.5, 'top': 12., 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0., 'top': 12., 'grid_size': 0.05, 'threshold': 0.5}\n",
     "\n",
     "building_grower = growing.LayerLCC(Labels.BUILDING, ahn_reader, \n",
     "                                   params=[building_top, building_bottom])"
