--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -126,6 +126,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6185f5f-dc74-412f-95cc-9f0c5d1099a4",
+   "metadata": {},
+   "source": [
+    "### [Option] Ground surface refinement\n",
+    "\n",
+    "By default, the AHNFuser will refine the ground surface below clusters of (unlabelled) non-ground objects. This reduced the effect of setting the epsilon parameter too high. This option can be disabled by passing `refine_ground=False` to the AHNFuser.\n",
+    "\n",
+    "The refinement process has separate parameters, which can be modified (optional argument for the AHNFuser).\n",
+    "\n",
+    "```\n",
+    "params = {'bottom': 0.02,       # Min elevation level for the refinement.\n",
+    "          'top': 0.5,           # Max elevation level for the refinement.\n",
+    "          'grid_size': 0.4      # Octree grid size for LCC method, in meters. Lower means a more fine-grained clustering.\n",
+    "          'min_comp_size': 50,  # Minimum number of points for a component to be considered.\n",
+    "          'buffer': 0.05}       # Buffer (in m) around clusters which will be included in refinement. \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bd91e31-98cb-4a2a-be96-23fce80ccc44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# E.g.:\n",
+    "params = {'bottom': 0., 'buffer': 0.02}\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_reader=npz_reader,\n",
+    "                                   target='ground', epsilon=0.2, params=params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "144b90fe",
    "metadata": {},
    "source": [
     "### [Optional] Segment road parts\n",
