Updated notebooks for packaging.

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -15,17 +15,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03f66669-5b3f-402e-a9b7-a1279f778fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "productive-median",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
-    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
-    "import src.scrapers.ndw_scraper as ndw_scraper\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.csv_utils as csv_utils"
+    "import upcp.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
+    "import upcp.scrapers.ndw_scraper as ndw_scraper\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.csv_utils as csv_utils"
    ]
   },
   {
@@ -245,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
