--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -17,25 +17,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b93f546-68ee-4b1d-b0eb-3f3479292aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c4489f95-98a5-4ed2-87e7-36a0554960a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
     "# Import modules.\n",
     "import logging\n",
     "\n",
-    "import src.fusion as fusion\n",
-    "from src.pipeline import Pipeline\n",
-    "import src.region_growing as growing\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.bgt_utils as bgt_utils\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.log_utils as log_utils\n",
-    "import src.utils.csv_utils as csv_utils\n",
-    "from src.labels import Labels\n",
+    "import upcp.fusion as fusion\n",
+    "from upcp.pipeline import Pipeline\n",
+    "import upcp.region_growing as growing\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.bgt_utils as bgt_utils\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.log_utils as log_utils\n",
+    "import upcp.utils.csv_utils as csv_utils\n",
+    "from upcp.labels import Labels\n",
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.reset_logger()\n",
@@ -171,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c1bac19b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +194,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03a05342",
    "metadata": {},
    "source": [
     "### [Alternative] Building fuser using BGT data\n",
@@ -295,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "755a8b87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42d2419e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
