--- a/notebooks/Region growing.ipynb
+++ b/notebooks/Region growing.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Region Growing\n",
     "\n",
@@ -17,14 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
     "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
-    "import src.region_growing as growing\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "from src.region_growing.region_growing import RegionGrowing\n",
-    "from src.labels import Labels\n",
-    "from src.pipeline import Pipeline"
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import upcp.region_growing as growing\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "from upcp.region_growing.region_growing import RegionGrowing\n",
+    "from upcp.labels import Labels\n",
+    "from upcp.pipeline import Pipeline"
    ]
   },
   {
@@ -80,7 +90,7 @@
     "- Next, our code grows regions, or in this case all points inside a clusters, based on a percentage of initial seed points inside a cluster. \n",
     "\n",
     "### Installation instructions\n",
-    "A Python wrapper provided for CloudCompare allows to use “Label Connected Components”. The Python wrapper works on **linux only**. This wrapper and all the dependencies can be installed using the build and installation instructions in the README at [CloudCompare-PythonPlugin.](https://github.com/tmontaigu/CloudCompare-PythonPlugin.git)"
+    "A Python wrapper provided for CloudCompare allows to use “Label Connected Components”. This wrapper and all the dependencies can be installed using the build and installation instructions in the README at [CloudCompare-PythonPlugin.](https://github.com/tmontaigu/CloudCompare-PythonPlugin.git)"
    ]
   },
   {
@@ -205,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
