--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -5,7 +5,7 @@
    "id": "c3fd9730-0dc5-4520-a485-b2445c984820",
    "metadata": {},
    "source": [
-    "# Pre-processing of LAS tiles\n",
+    "python3 -m build# Pre-processing of LAS tiles\n",
     "\n",
     "Pre-processing consists of two parts:\n",
     "1. Clipping of AHN point clouds to match target point clouds;\n",
@@ -15,21 +15,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57f542f8-21bf-4382-bfb9-11b11b05802b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8adb4173-257d-49f2-9b20-c5af54f642b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Helper script to allow importing from parent folder.\n",
-    "import set_path\n",
-    "\n",
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "import src.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.plot_utils as plot_utils"
+    "import upcp.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.plot_utils as plot_utils"
    ]
   },
   {
@@ -207,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
