--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -1,28 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d70114bf-67b2-4a07-80c9-a518609ed99c",
+   "metadata": {},
+   "source": [
+    "# Labelling of cars\n",
+    "\n",
+    "We label cars by locating 'car-shaped' clusters above roads and parking bays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "989afa0d-3b10-4b71-a3c2-38f85e4df708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f6d01928",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
     "import logging\n",
     "\n",
-    "import src.utils.log_utils as log_utils\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.csv_utils as csv_utils\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.bgt_utils as bgt_utils\n",
-    "import src.fusion as fusion\n",
-    "from src.labels import Labels\n",
-    "from src.pipeline import Pipeline\n",
+    "import upcp.utils.log_utils as log_utils\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.csv_utils as csv_utils\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.bgt_utils as bgt_utils\n",
+    "import upcp.fusion as fusion\n",
+    "from upcp.labels import Labels\n",
+    "from upcp.pipeline import Pipeline\n",
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.reset_logger()\n",
@@ -77,10 +96,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b39c75",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "3cfde1e2-7cd4-4be6-8299-b9fdeeb25b35",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
@@ -156,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
