--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -12,27 +12,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d88ff46-697c-4c66-8141-bfb6a59aef81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f538d8e7-f542-47cb-ab0a-1b40c6675a0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
     "import logging\n",
     "\n",
-    "import src.fusion as fusion\n",
-    "import src.region_growing as growing\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.log_utils as log_utils\n",
-    "import src.utils.csv_utils as csv_utils\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.bgt_utils as bgt_utils\n",
-    "from src.pipeline import Pipeline\n",
-    "from src.labels import Labels\n",
+    "import upcp.fusion as fusion\n",
+    "import upcp.region_growing as growing\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.log_utils as log_utils\n",
+    "import upcp.utils.csv_utils as csv_utils\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.bgt_utils as bgt_utils\n",
+    "from upcp.pipeline import Pipeline\n",
+    "from upcp.labels import Labels\n",
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.reset_logger()\n",
@@ -257,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
