--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -1,28 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "653c69d9-86f2-4669-bcd7-3716eac6ee52",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Labelling street furniture\n",
+    "\n",
+    "E.g. runnish bins and city benches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41f21ddc-b8d8-4de9-aa8f-54ec6cfde498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
+    "# Add project src to path.\n",
+    "import set_path"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f6d01928",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
     "import logging\n",
     "\n",
-    "import src.utils.las_utils as las_utils\n",
-    "import src.utils.log_utils as log_utils\n",
-    "import src.utils.csv_utils as csv_utils\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.bgt_utils as bgt_utils\n",
-    "import src.fusion as fusion\n",
-    "from src.labels import Labels\n",
-    "from src.pipeline import Pipeline\n",
+    "import upcp.utils.las_utils as las_utils\n",
+    "import upcp.utils.log_utils as log_utils\n",
+    "import upcp.utils.csv_utils as csv_utils\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.bgt_utils as bgt_utils\n",
+    "import upcp.fusion as fusion\n",
+    "from upcp.labels import Labels\n",
+    "from upcp.pipeline import Pipeline\n",
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.reset_logger()\n",
@@ -75,10 +96,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b39c75",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "1c9aac1b-57a7-4663-b51b-8d117b2a0e51",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Object type-specific parameters.\n",
@@ -143,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
