Added cutycapt note for save_tiles_map function.

--- a/notebooks/Visualisations.ipynb
+++ b/notebooks/Visualisations.ipynb
@@ -294,6 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: this function requires the cutycapt package and only works on Linux.\n",
+    "# Ubuntu: sudo apt install cutycapt\n",
     "plot_utils.save_tiles_map(tiles_map, 'dataset_map.html')"
    ]
   },
